# jumbo-mana-technical-test

./: README.md  compose.yaml
api/: Containerfile  README.md  pyproject.toml
api/src/api/: __init__.py  api.py  chess.py
webapp/: Containerfile  README.md  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
webapp/src/: App.vue  game.ts
webapp/src/components/: Chessboard.vue  ColorModeToggle.vue  Sidebar.vue  SliderControl.vue  Spinner.vue
