[project]
name = "api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jonathan SCHERRER", email = "jonathan.s.scherrer@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.3",
    "chess>=1.11.1",
    "fastapi-versioning>=0.10.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pyright]
venvPath = "."
venv = ".venv"
